# pharmacy_project

./: .gitignore  Dockerfile  README.md  TZ.md  db.sqlite3  docker-compose.yml  manage_test_data.py  pyproject.toml  requirements.txt
drugs/: admin.py  backends.py  forms.py  models.py  urls.py  views.py
drugs/management/commands/: fill_db.py  send_availability_notifications.py
drugs/migrations/: 0001_initial.py  0002_customuser_username_alter_customuser_date_joined.py
drugs/templates/drugs/: clear_test_data.html  drug_detail.html  drug_list.html  drug_search.html  edit_subscription.html  fill_test_data.html  home.html  login.html  my_subscriptions.html  register.html  subscribe.html  unsubscribe.html
pharmacy/: settings.py  urls.py
templates/: base.html
